Fix the problem of icons not properly show in dark mode.

--- a/source/css/nav.css
+++ b/source/css/nav.css
@@ -151,7 +151,7 @@ body[data-color-scheme="dark"] nav .nav-item-github {
     background-image: url(/theme-img/github-mark-light.png);
 }
 
-body[data-color-scheme="dark"] nav .nav-item-github {
+body[data-color-scheme="dark"] nav .nav-item-linkedin {
     background-image: url(/theme-img/linkedin-light.png);
 }
 
